# Yappy

./: .gitignore  .vscodeignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
desktop/: package-lock.json  package.json  vite.config.js  vite.config.js.map
desktop/scripts/: bundle-sidecars.cjs
desktop/src/: AnimatedLogo.tsx  App.js  App.js.map  App.tsx  main.js  main.js.map  styles.css
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: desktop.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: copilot.rs  lib.rs  main.rs  recording.rs
desktop/src-tauri/src/plugins/: chrome.rs  mod.rs  notes.rs  outlook.rs
media/webview/: panel.css  panel.js
scripts/: download-binaries.js  download-wasm.js
src/: binaries.ts  extension.ts
src/actions/: ActionExecutor.ts
src/audio/: AudioPanel.ts  AudioRecorder.ts
src/config/: Settings.ts
src/llm/: CopilotRefiner.ts  IntentClassifier.ts
src/output/: TextInserter.ts
src/stt/: ModelManager.ts  WhisperEngine.ts
src/ws/: CopilotBridge.ts
