[package]
name = "sunyapper-desktop"
version = "0.2.0"
description = "SunYapper - Offline voice-to-text dictation"
authors = ["kdb"]
edition = "2021"

[lib]
name = "sunyapper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
enigo = "0.3"
tokio-tungstenite = "0.26"
futures-util = "0.3.32"
uuid = { version = "1.22.0", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.183"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
